# ddengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  engine_example.cpp  input_example.cpp  logger.cpp  parent_child_example.cpp  renderers_example.cpp  sprite_example.cpp  temporizer_example.cpp  text_example.cpp  window_example.cpp
examples/logger/: main.cpp
include/ddengine/components/: quad.hpp  sprite.hpp
include/ddengine/entities/: aminated_sprite_2d.hpp  sprite_2d.hpp
include/ddengine/renderers/: line_renderer.hpp  quad_renderer.hpp
include/ddengine/resources/: font.hpp  resource_manager.hpp
include/ddengine/util/: logger.hpp
scripts/: headers.js
src/: CMakeLists.txt  ddenginepch.hpp
src/components/: camera.cpp  camera.hpp  line.cpp  line.hpp  quad.cpp  quad.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp  transform.cpp  transform.hpp
src/core/: engine.cpp  engine.hpp  input.cpp  input.hpp  temporizer.cpp  temporizer.hpp  window.cpp  window.hpp
src/ddengine/components/: camera.cpp  camera.hpp  entity.hpp  entity_manager.hpp  line.cpp  line.hpp  quad.cpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp  transform.cpp  transform.hpp
src/ddengine/core/: engine.cpp  engine.hpp  input.cpp  input.hpp  temporizer.cpp  temporizer.hpp  window.cpp  window.hpp
src/ddengine/entities/: animated_sprite_2d.cpp  sprite_2d.cpp  sprite_entity.cpp  sprite_entity.hpp
src/ddengine/renderers/: line_renderer.cpp  line_renderer.hpp  quad_renderer.cpp  quad_renderer.hpp  renderer.hpp
src/ddengine/resources/: font.cpp  font.hpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/ddengine/util/: color.cpp  color.hpp  ddengine.hpp  logger.hpp  random.cpp  random.hpp
src/entities/: aminated_sprite_2d.hpp  animated_sprite_2d.cpp  sprite_2d.cpp  sprite_2d.hpp
src/renderers/: line_renderer.cpp  line_renderer.hpp  quad_renderer.cpp  quad_renderer.hpp  renderer.hpp
src/resources/: font.cpp  font.hpp  resource_manager.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/util/: color.cpp  color.hpp  logger.cpp  logger.hpp  random.cpp  random.hpp
tests/: CMakeLists.txt  game.hpp  main.cpp
